# flobe

./: .gitignore  CMakeLists.txt  Makefile  README.md  bug3177.md  diag_f.F90  diag_mkl_bench.tsv  flobe.code-workspace
benchmarks/madiag1/: CMakeLists.txt  Makefile  bench_cohabitation.bash  cohab_batch.bash  diag_f.F90  diag_lapack  graphics.py  madiag1_batch.bash  madiag1_star.bash  readme.md
benchmarks/madiag1/measurements/fr.univ-rennes1.ipr.physix/: diag_bench.tsv  diag_mkl_bench.tsv  dsyev_bench.tsv
benchmarks/madiag1/measurements/fr.univ-rennes1.ipr.physix/physix12/: physix12_5750.tsv  physix12_8696.tsv  physix12_9079.tsv
benchmarks/madiag1/measurements/fr.univ-rennes1.ipr.physix/physix90/: physix90_368042.tsv  physix90_368318.tsv
benchmarks/madiag1/measurements/fr.univ-rennes1.ipr.physix/physix96/: physix96_189748.tsv
benchmarks/madiag2/: CMakeLists.txt  diag_f.F90  readme.md  runbench.py
benchmarks/madiag2/measurements/alambix98.ipr.univ-rennes.fr/: runbench.tsv
benchmarks/mamul1/: CMakeLists.txt  Makefile  mamul1.F90
cmake/: FindMAGMA.cmake
measurements/fr.univ-rennes1.ipr.physix/madiag1/: diag_bench.tsv  multi_diag_mkl_omp.tsv
